Fix scrolling bug on mobile nav menus

--- a/components/player-page/player-container.module.scss
+++ b/components/player-page/player-container.module.scss
@@ -32,6 +32,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
+  height: 100vh;
   background-color: black;
   color: white;
   z-index: 4;
@@ -48,6 +49,9 @@
 }
 
 @media (max-width: 1200px) {
+  .player-container {
+    height: 100%;
+  }
   .albums-container {
     display: none;
     width: 0%;
@@ -58,6 +62,7 @@
     transform: translateX(0%);
     width: 100%;
     display: block;
+    overflow: visible;
   }
 
   .player {
@@ -77,7 +82,9 @@
 
   .open-songs {
     width: 100%;
+    height: 100%;
     transform: translateX(0%);
     display: block;
+    overflow: visible;
   }
 }
