--- a/components/player-page/player-controller.module.scss
+++ b/components/player-page/player-controller.module.scss
@@ -126,6 +126,12 @@
   }
 }
 
+.empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 1200px) {
   .player {
     width: 50%;
